base/apps/media/radarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: ca-server-cluster-issuer
    cert-manager.io/common-name: radarr.internal
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Radarr
    gethomepage.dev/icon: radarr.png
    gethomepage.dev/description: Movie management
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - radarr.internal
      secretName: radarr-tls
  rules:
    - host: radarr.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
